--- a/Practise.ipynb
+++ b/Practise.ipynb
@@ -1758,42 +1758,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c39d459-3a28-4a5d-b03f-6fee47584d79",
+   "id": "592b6c69",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#hello world"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "147c5069",
+   "id": "38a3e52e",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "feee42c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "844850ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c31042cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#hello world"
+   ]
   }
  ],
  "metadata": {
